--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-build/
-libs/
-release/
+app/build/
+app/libs/
+app/release/
+app/src/main/res/values/secrets.xml
+.gradle
+.idea
+local.properties
+
