--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "gemenielabs.vocabulary"
         minSdk 26
         targetSdk 33
-        versionCode 5
-        versionName "Lowry"
+        versionCode 7
+        versionName "Haval"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
